# robotic-pickpoint-vision

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: streamlit_app.py
docs/: demo_instructions.md  detection_improvement_plan.md  failure_analysis.md  github_checklist.md  project_plan.md  results_summary.md  step11_ui_fix.md  step13b_real_segmentation.md  step13c_ui_detection_tips.md  step13d_cuda_ui_hints.md  step13e_cuda_setup.md  step13e_test_fix.md  step14a_interactive_contour_tuning.md  step14b_live_contour_tuning.md
scripts/: apply_step13b_patch.py  apply_step13d_patch.py  apply_step13e_cuda_patch.py  check_cuda_setup.py  create_robustness_variants.py  create_synthetic_dataset.py  evaluate.py  evaluate_robustness.py  export_demo_assets.py  run_demo.py  run_integrated_pipeline.py  run_pose_estimation.py  run_yolo_detection.py  verify_setup.py  visualize_synthetic_results.py
src/pickpoint_vision/: __init__.py  app_utils.py  contour_tuning.py  detection.py  evaluation.py  integrated_pipeline.py  pipeline.py  pose_estimation.py  real_segmentation.py  robustness.py  robustness_evaluation.py  segmentation.py  synthetic_data.py  utils.py  (+1 more)
src/pickpoint_vision.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_app_utils.py  test_contour_tuning.py  test_cuda_device.py  test_detection.py  test_evaluation.py  test_integrated_pipeline.py  test_pipeline.py  test_pose_estimation.py  test_real_segmentation.py  test_robustness.py  test_robustness_evaluation.py  test_segmentation.py  test_synthetic_data.py  test_visualization.py
