[build-system]
requires = ["setuptools>=68.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pickpoint-vision"
version = "0.1.0"
description = "Vision-based pick-point and orientation estimation for robotic manipulation."
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Adnan Tawkul" }
]
dependencies = [
    "opencv-python>=4.9.0",
    "numpy>=1.26.0",
    "torch>=2.2.0",
    "ultralytics>=8.2.0",
    "streamlit>=1.35.0",
    "pandas>=2.2.0",
    "matplotlib>=3.8.0",
    "Pillow>=10.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "ruff>=0.5.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
